# layered_hardware

./: .clang-format  CHANGELOG.rst  CMakeLists.txt  LICENSE  README.md  package.xml  plugins.xml
config/: example_controllers.yaml
examples/3dof_manipulator/description/: model.xacro  robot_description.urdf.xacro  ros2_control.xacro
examples/3dof_manipulator/launch/: 3dof_manipulator_example.launch.py
examples/common/description/: materials.xacro
examples/single_actuator/config/: controllers.yaml  display_config.rviz
examples/single_actuator/description/: model.xacro  robot_description.urdf.xacro  ros2_control.xacro
examples/single_actuator/launch/: single_actuator_example.launch.py
images/: layered_scheme.pptx
include/layered_hardware/: actuator_to_joint_transmission.hpp  common_namespaces.hpp  dummy_actuator_layers.hpp  joint_limits_layer.hpp  joint_to_actuator_transmission.hpp  layer_base.hpp  layer_interface.hpp  layered_hardware.hpp  logging_utils.hpp  merge_utils.hpp  mock_actuator.hpp  mock_actuator_layer.hpp  monitor_layer.hpp  string_registry.hpp  transmission_layer.hpp
launch/: example.launch  example.launch.py
src/: layered_hardware_default_plugins.cpp  layered_hardware_node.cpp  layered_hardware_plugins.cpp
urdf/: example.urdf
